Accessibility Issue 1 - Fix Lead Color Contrast

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -12,7 +12,7 @@
 @mixin big_lead {
   font-size: 1.2rem;
   font-weight: 300;
-  color: rgba($base-color, .6);
+  color: rgba($base-color, .7);
 
   @include breakpoint($large) { 
     font-size: 1.7rem; 
